test/Fail/Issue5681.agda
{-# OPTIONS --without-K #-}

record foo : {!!} where
